# PruneOneMoreToken

./: .gitignore  .zenodo.json  README.md  benchmark.py  offline_computation.py  pyproject.toml  requirements.txt
dinov2/: dinov2.py
pomt/: __init__.py  dinov2_patch.py  timm_patch.py  utils.py
pomt/datasets/: __init__.py
pomt/dinov2/: model.py
pomt/dinov2/layers/: __init__.py  attention.py  block.py  swiglu_ffn.py
pomt/tome/: merge.py  utils.py
pomt/tome/patch/: __init__.py  dinov2.py  mae.py  timm.py
scripts/: README.md  jetson_agxorin_set_clocks.sh
tome/patch/: dinov2.py  swag.py  timm.py
